Se agregó el ejemplo de iteracion de valores

--- a/src/main/webapp/WEB-INF/pages/hello.html
+++ b/src/main/webapp/WEB-INF/pages/hello.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org" layout:decorator="main">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
+      xmlns:th="http://www.thymeleaf.org" 
+      layout:decorator="main">
     <head>
         <title>Content page 1</title>
         <script src="content-script.js"></script>
